[gd_scene load_steps=22 format=3 uid="uid://ibmgxjl33jn8"]

[ext_resource type="Script" path="res://core/ui/menu/settings/settings_menu.gd" id="1_olmbp"]
[ext_resource type="Theme" uid="uid://bko0q7gp1hwjp" path="res://assets/themes/dracula.tres" id="2_7txcp"]
[ext_resource type="PackedScene" uid="uid://orey8uxm7v6v" path="res://core/systems/state/visibility_manager.tscn" id="2_364oy"]
[ext_resource type="Resource" uid="uid://d3gp85f35oiw6" path="res://assets/state/states/settings.tres" id="3_5g7v4"]
[ext_resource type="PackedScene" uid="uid://df5o1o2dsik84" path="res://core/ui/components/button.tscn" id="3_11sf6"]
[ext_resource type="Resource" uid="uid://e7bbebwf7guj" path="res://assets/state/states/main_menu.tres" id="4_cyj3i"]
[ext_resource type="PackedScene" uid="uid://cbybmmt7bigkt" path="res://core/ui/menu/settings/plugin_store_menu.tscn" id="4_dx1s7"]
[ext_resource type="Resource" uid="uid://bmgs1ngma1523" path="res://assets/state/states/in_game_menu.tres" id="5_tny5o"]
[ext_resource type="Resource" uid="uid://bp807nlks8eq1" path="res://assets/state/states/quick_access_menu.tres" id="6_fyuji"]
[ext_resource type="PackedScene" uid="uid://cfk55ufy6luqt" path="res://core/ui/menu/settings/plugin_settings_menu.tscn" id="6_tmsre"]
[ext_resource type="Resource" uid="uid://dja3m1mevv6xw" path="res://assets/state/states/osk.tres" id="7_jneep"]
[ext_resource type="PackedScene" uid="uid://b76dvfuouhlwd" path="res://core/systems/state/state_updater.tscn" id="11_11xk2"]
[ext_resource type="Resource" uid="uid://iqrotrmq62i6" path="res://assets/state/state_machines/settings_state_machine.tres" id="12_q442d"]
[ext_resource type="Resource" uid="uid://4n3376qdy3y3" path="res://assets/state/states/settings_general.tres" id="13_k0fou"]
[ext_resource type="Resource" uid="uid://doxatxmp2mlty" path="res://assets/state/states/settings_plugins.tres" id="14_wrm26"]
[ext_resource type="Resource" uid="uid://u6fyqt1ogrie" path="res://assets/state/states/settings_plugin_store.tres" id="15_bra7i"]
[ext_resource type="Resource" uid="uid://0f3pirade1ok" path="res://assets/state/states/settings_windows.tres" id="15_s8u5h"]
[ext_resource type="PackedScene" uid="uid://bimj0mmmy32ju" path="res://core/ui/menu/settings/general_settings_menu.tscn" id="16_jih4y"]
[ext_resource type="Script" path="res://core/ui/components/transition_container.gd" id="17_2cktl"]
[ext_resource type="PackedScene" uid="uid://bo077a5mwi7xl" path="res://core/ui/components/transition_fade_in.tscn" id="18_agbuc"]
[ext_resource type="PackedScene" uid="uid://dy2w1ac8n2o7n" path="res://core/ui/menu/debug/gamescope_inspector.tscn" id="18_qnd5c"]

[node name="SettingsMenu" type="Control" groups=["settings_menu"]]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_olmbp")

[node name="VisibilityManager" parent="." instance=ExtResource("2_364oy")]
state = ExtResource("3_5g7v4")
visible_during = [ExtResource("4_cyj3i"), ExtResource("5_tny5o"), ExtResource("6_fyuji"), ExtResource("7_jneep")]

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_7txcp")

[node name="MainContainer" type="HBoxContainer" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MenuMarginContainer" type="MarginContainer" parent="MainContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MainContainer/MenuMarginContainer"]
layout_mode = 2

[node name="GeneralButton" parent="MainContainer/MenuMarginContainer/VBoxContainer" instance=ExtResource("3_11sf6")]
layout_mode = 2
text = "General"

[node name="StateUpdater" parent="MainContainer/MenuMarginContainer/VBoxContainer/GeneralButton" instance=ExtResource("11_11xk2")]
state_machine = ExtResource("12_q442d")
state = ExtResource("13_k0fou")
action = 2
on_signal = "focus_entered"

[node name="HSeparator" type="HSeparator" parent="MainContainer/MenuMarginContainer/VBoxContainer"]
layout_mode = 2

[node name="PluginsButton" parent="MainContainer/MenuMarginContainer/VBoxContainer" instance=ExtResource("3_11sf6")]
layout_mode = 2
text = "Plugins"

[node name="StateUpdater" parent="MainContainer/MenuMarginContainer/VBoxContainer/PluginsButton" instance=ExtResource("11_11xk2")]
state_machine = ExtResource("12_q442d")
state = ExtResource("14_wrm26")
action = 2
on_signal = "focus_entered"

[node name="PluginStoreButton" parent="MainContainer/MenuMarginContainer/VBoxContainer" instance=ExtResource("3_11sf6")]
layout_mode = 2
text = "Plugin Store"

[node name="StateUpdater" parent="MainContainer/MenuMarginContainer/VBoxContainer/PluginStoreButton" instance=ExtResource("11_11xk2")]
state_machine = ExtResource("12_q442d")
state = ExtResource("15_bra7i")
action = 2
on_signal = "focus_entered"

[node name="HSeparator2" type="HSeparator" parent="MainContainer/MenuMarginContainer/VBoxContainer"]
layout_mode = 2

[node name="WindowsButton" parent="MainContainer/MenuMarginContainer/VBoxContainer" instance=ExtResource("3_11sf6")]
layout_mode = 2
text = "Windows"

[node name="StateUpdater" parent="MainContainer/MenuMarginContainer/VBoxContainer/WindowsButton" instance=ExtResource("11_11xk2")]
state_machine = ExtResource("12_q442d")
state = ExtResource("15_s8u5h")
action = 2
on_signal = "focus_entered"

[node name="ContentMarginContainer" type="MarginContainer" parent="MainContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 3.0
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="GeneralSettings" parent="MainContainer/ContentMarginContainer" instance=ExtResource("16_jih4y")]
layout_mode = 2

[node name="VisibilityManager" parent="MainContainer/ContentMarginContainer/GeneralSettings" instance=ExtResource("2_364oy")]
state_machine = ExtResource("12_q442d")
state = ExtResource("13_k0fou")
visible_during = []

[node name="TransitionContainer" type="Node" parent="MainContainer/ContentMarginContainer/GeneralSettings"]
script = ExtResource("17_2cktl")

[node name="TransitionFadeIn" parent="MainContainer/ContentMarginContainer/GeneralSettings/TransitionContainer" instance=ExtResource("18_agbuc")]

[node name="PluginSettings" parent="MainContainer/ContentMarginContainer" instance=ExtResource("6_tmsre")]
visible = false
layout_mode = 2

[node name="TransitionContainer" type="Node" parent="MainContainer/ContentMarginContainer/PluginSettings"]
script = ExtResource("17_2cktl")

[node name="TransitionFadeIn" parent="MainContainer/ContentMarginContainer/PluginSettings/TransitionContainer" instance=ExtResource("18_agbuc")]

[node name="ScrollContainer" type="ScrollContainer" parent="MainContainer/ContentMarginContainer"]
visible = false
layout_mode = 2
follow_focus = true

[node name="VisibilityManager" parent="MainContainer/ContentMarginContainer/ScrollContainer" instance=ExtResource("2_364oy")]
state_machine = ExtResource("12_q442d")
state = ExtResource("15_bra7i")
visible_during = []

[node name="PluginStore" parent="MainContainer/ContentMarginContainer/ScrollContainer" instance=ExtResource("4_dx1s7")]
visible = false
layout_mode = 2
state_manager_path = NodePath("")

[node name="TransitionContainer" type="Node" parent="MainContainer/ContentMarginContainer/ScrollContainer"]
script = ExtResource("17_2cktl")

[node name="TransitionFadeIn" parent="MainContainer/ContentMarginContainer/ScrollContainer/TransitionContainer" instance=ExtResource("18_agbuc")]

[node name="GamescopeInspector" parent="MainContainer/ContentMarginContainer" instance=ExtResource("18_qnd5c")]
visible = false
layout_mode = 2

[node name="VisibilityManager" parent="MainContainer/ContentMarginContainer/GamescopeInspector" instance=ExtResource("2_364oy")]
state_machine = ExtResource("12_q442d")
state = ExtResource("15_s8u5h")
visible_during = []

[node name="TransitionContainer" type="Node" parent="MainContainer/ContentMarginContainer/GamescopeInspector"]
script = ExtResource("17_2cktl")

[node name="TransitionFadeIn" parent="MainContainer/ContentMarginContainer/GamescopeInspector/TransitionContainer" instance=ExtResource("18_agbuc")]
